# dagster_starter

./: .gitignore  README.md  app.py  pyproject.toml
.tmp_dagster_home_6oktveg9/history/: runs.db
.tmp_dagster_home_6oktveg9/history/runs/: 404fdaef-6ee3-40e0-91bb-0149d811a527.db  6936a947-01a9-4f01-9b8d-badadee29a10.db  ac2c2682-f88f-4e92-ab55-3577761438fc.db  index.db
.tmp_dagster_home_6oktveg9/schedules/: schedules.db
.tmp_dagster_home_6oktveg9/storage/: daily_financial_summary  weekly_financial_summary
.tmp_dagster_home_6oktveg9/storage/404fdaef-6ee3-40e0-91bb-0149d811a527/compute_logs/: alfglovb.err  gkyurpqc.err  qwrjjfwb.err  tdaxfpuw.err  wnighrmx.err  zhwwmaff.err
.tmp_dagster_home_6oktveg9/storage/6936a947-01a9-4f01-9b8d-badadee29a10/compute_logs/: ashgzzkg.err  epnfpmdl.err  tafjdosx.err  uvghbwzl.err  vfkepazc.err  ysvkdsel.err
.tmp_dagster_home_6oktveg9/storage/ac2c2682-f88f-4e92-ab55-3577761438fc/compute_logs/: dbtnvxdd.err  ikihdxvk.err  jktiltou.err  vdyuwrie.err  wbnsrwvv.err  wkojitag.err
data/aggregated_financial_data/: daily_financial_summary.parquet  weekly_financial_summary.parquet
src/my_speed_camera_project/: data_ingestion.py  data_visualization.py  definitions.py  financial_aggregation.py  financial_data_processing.py  resources.py
